# Cerebras_API_Tools

./: .gitignore  CMakeLists.txt  README.md  cerebras_cli.cpp  cerebras_server.cpp  cli  cli.cpp  diagnostic_troubleshooting_prompts.md  hardware_system_prompts.md  index.html  legal.html  ml_optimization_prompts.md  prompts_README.md  release_notes.md  script.js  styles.css
docs/: index.html
